<resources>
    <string name="app_name">Proyecto</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="siguiente">Siguiente</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="la_mejor_aplicaci_n_de_entrenamiento">La mejor aplicación de entrenamiento!</string>
    <string name="actividades">Actividades</string>
    <string name="men_principal">Menú principal</string>
    <string name="entrenamiento">Entrenamiento</string>
    <string name="programar">Programar</string>
    <string name="ranking">Ranking</string>
    <string name="musica">Musica</string>
    <string name="ubicaci_n_actual">Ubicación actual</string>
    <string name="direcci_n">Dirección</string>
    <string name="latitud"><![CDATA[<< Latitud >>]]></string>
    <string name="longitud"><![CDATA[<< Longitud >>]]></string>
    <string name="latitud_">Latitud:</string>
    <string name="longitud_">Longitud:</string>
    <string name="gps">GPS</string>
    <string name="direccion"><![CDATA[<<direccion>>]]></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mira_tu_posicionamiento">Mira tu posicionamiento</string>
    <string name="disfruta_corriendo">Disfruta corriendo</string>
    <string name="programa_tu_carrera">Programa tu carrera</string>
    <string name="inicia_tu_propia_carrera">Inicia tu propia carrera</string>
    <string name="personas">personas</string>
<<<<<<< HEAD

    <string name="facebook_app_id">4792522207487117</string>
    <string name="fb_login_protocol_scheme">fb4792522207487117</string>
=======
    <string name="start">Start</string>
    <string name="stop">Stop</string>
>>>>>>> ac08030045ef52b4e5682e4e702095f565ddf9bb
</resources>