<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Prueba">
    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="250dp"
        android:background="@color/purple_200"
        android:enabled="false"
        android:text="@string/action_sign_in" />

    <EditText
        android:id="@+id/txt_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:layout_marginTop="180dp"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        />

    <EditText
        android:id="@+id/username"
        android:layout_marginTop="120dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_facebook"
        android:layout_centerInParent="true" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_marginTop="400dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_gmail"
        android:layout_centerHorizontal="true" />

</RelativeLayout>