<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:background="@color/white">
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="290dp"
            android:contentDescription="@string/personas"
            android:src="@drawable/coolapp" />


        <TextView
            android:id="@+id/txt_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat"
            android:text="@string/bienvenido"
            android:textColor="@color/purple_App_Suave"
            android:textSize="32sp"
            android:textStyle="bold" />

         <TextView
            android:id="@+id/txt_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:layout_gravity="center"
            android:fontFamily="@font/montserrat"
            android:text="@string/la_mejor_aplicaci_n_de_entrenamiento"
            android:textColor="@color/purple_App_Suave"
            android:textSize="17sp"
             app:layout_constraintBottom_toBottomOf="@id/txt_1"/>
        <ImageView
            android:id="@+id/dospersonas"
            android:layout_width="match_parent"
            android:layout_height="290dp"
            android:contentDescription="@string/personas"
            android:src="@drawable/dospersonas" />
        <Button
            android:id="@+id/btn_toPermissions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/bg"
            android:text="@string/siguiente"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/txt_2" />



</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>