<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".view.MenuPrincipal">
    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="373dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-73dp"
        app:srcCompat="@drawable/imagen4"
        android:contextClickable="true"
        tools:layout_editor_absoluteX="-27dp"
        tools:layout_editor_absoluteY="459dp" />


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="391dp"
        android:layout_height="223dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="156dp"
        app:srcCompat="@drawable/imagen3"
        tools:layout_editor_absoluteX="-8dp"
        tools:layout_editor_absoluteY="329dp" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="262dp"
        app:srcCompat="@drawable/imagen2"
        tools:layout_editor_absoluteX="-17dp"
        tools:layout_editor_absoluteY="140dp" />


    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="401dp"
        android:layout_height="343dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="344dp"
        app:srcCompat="@drawable/imagen1"
        tools:layout_editor_absoluteX="-21dp"
        tools:layout_editor_absoluteY="-15dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
       >
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="578dp"
        app:srcCompat="@drawable/bg_superior"
        tools:layout_editor_absoluteX="-93dp"
        tools:layout_editor_absoluteY="-91dp" />

    <TextView
        android:id="@+id/txt_menuPrincipal"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="117dp"
        android:layout_marginBottom="642dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/men_principal"

        android:textColor="#000000"
        android:textSize="26sp" />

    <Button
        android:id="@+id/btn_toLogin"
        android:layout_width="42dp"
        android:layout_height="36dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="644dp"
        android:background="@drawable/ic_perfil"
        android:backgroundTint="@color/purple_App"
         />

    <ImageButton
        android:id="@+id/imgbtn_atras"
        android:layout_width="78dp"
        android:layout_height="51dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="333dp"
        android:layout_marginBottom="680dp"
        android:background="@color/white"
        app:srcCompat="@drawable/ic_regresar" />

    <TextView
        android:id="@+id/txt_entrenamiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="199dp"
        android:layout_marginBottom="502dp"
        android:text="@string/entrenamiento"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="224dp"
        android:layout_marginBottom="478dp"
        android:text="@string/inicia_tu_propia_carrera"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/txt_programar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="329dp"
        android:text="@string/programar"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="305dp"
        android:text="@string/programa_tu_carrera"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/txt_ranking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="164dp"
        android:layout_marginBottom="197dp"
        android:text="@string/ubicaci_n_actual"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView51"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="188dp"
        android:layout_marginBottom="171dp"
        android:text="@string/mira_tu_posicionamiento"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/txt_musica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="72dp"
        android:text="@string/musica"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView61"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="53dp"
        android:text="@string/disfruta_corriendo"
        android:textColor="@color/white"
        android:textSize="14sp" />

</RelativeLayout>